[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "timedinput"
version = "1.0.0"
description = "Timeout for python inputs"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Kerollos Emad", email = "kerollos.em@gmail.com"}
]
keywords = ['input', 'stdin', 'timeout', 'console']
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.14',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.7',
    'Intended Audience :: Developers',
    'Environment :: Console',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: MacOS',
]

[project.urls]
"Source" = "https://github.com/kerollosy/timedinput"
"Bug Tracker" = "https://github.com/kerollosy/timedinput/issues"

[project.optional-dependencies]
jupyter = ["ipywidgets", "jupyter-ui-poll"]

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    skip_missing_interpreters = true
    env_list =
        py314
        py313
        py312
        py311
        py310
        py39
        py38
        py37

    [testenv]
    deps = pytest
    commands = pytest tests/
"""
